--- a/mission-01/mission-01.html
+++ b/mission-01/mission-01.html
@@ -20,7 +20,7 @@
         <p class="name">따뜻한 차 향기</p>
       </div>
       <div class="img"><img src="./images/product.png" alt="" /></div>
-      <a href="/" class="button">
+      <a href="/mission-01/mission-01.html" class="button">
         <div class="button-img"><span>구매하기</span></div>
       </a>
     </li>
@@ -30,7 +30,7 @@
         <p class="name">핸드크림 모음</p>
       </div>
       <div class="img"><img src="./images/product-kamill.png" alt="" /></div>
-      <a href="/" class="button">
+      <a href="/mission-01/mission-01.html" class="button">
         <div class="button-img"><span>구매하기</span></div>
       </a>
     </li>
@@ -40,7 +40,7 @@
         <p class="name">고소한 보리차</p>
       </div>
       <div class="img"><img src="./images/product-gomgom.png" alt="" /></div>
-      <a href="/" class="button">
+      <a href="/mission-01/mission-01.html" class="button">
         <div class="button-img"><span>구매하기</span></div>
       </a>
     </li>
