--- a/mission-02/mission-02.html
+++ b/mission-02/mission-02.html
@@ -19,7 +19,7 @@
       <form action="/" class="login-form">
         <fieldset class="reset-box">
           <legend>회원 로그인 폼</legend>
-          <div class="user-email is--focus is--valid">
+          <div class="user-email is--focus is--valid"><!-- .is--focus : 포커스 상태 / .is--invalid : 오류 / .is--valid : 정상 -->
             <label for="userEmail">이메일</label>
             <input
               type="email"
@@ -31,7 +31,7 @@
             />
             <p class="form-message">이메일 입력 방법이 잘못되었습니다. (예: user@domain.io)</p>
           </div>
-          <div class="user-pwd is--focus is--invalid">
+          <div class="user-pwd is--focus is--invalid"><!-- .is--focus : 포커스 상태 / .is--invalid : 오류 / .is--valid : 정상 -->
             <label for="userPwd">패스워드</label>
             <input
               type="password"
@@ -42,7 +42,7 @@
               minlength="6"
               class="form-input"
             />
-            <button class="button-password is--visible">
+            <button class="button-password is--visible"><!-- .is--visible : 눈 아이콘 보이기 -->
               <span class="sr-only">패스워드 보이지 않기</span>
             </button>
             <p class="form-message">패스워드는 숫자, 영어 조합 6자 이상 입력해야 합니다.</p>
@@ -59,6 +59,5 @@
       </ul>
     </section>
   </main>
-  
 </body>
 </html>
