이미지 경로 수정

--- a/mission-03/mission-03.html
+++ b/mission-03/mission-03.html
@@ -17,7 +17,7 @@
         <div class="header-inner">
           <h1 class="brand">
             <a href="/" class="logo-link">
-              <img src="./../../images/brand.svg" alt="NETFLIX" />
+              <img src="./images/brand.svg" alt="NETFLIX" />
             </a>
           </h1>
           <div class="menu">
