--- a/mission-03/mission-03.html
+++ b/mission-03/mission-03.html
@@ -3,13 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NETFLEX - 로그인</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT/fonts/variable/woff2/SUIT-Variable.css"
-    />
+    <title>NETFLEX - 홈(메인)</title>
+    <link rel="stylesheet" href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/member.css" />
   </head>
   <body>
     <div class="container">
