--- a/mission-03/mission-03.html
+++ b/mission-03/mission-03.html
@@ -6,6 +6,7 @@
     <title>NETFLEX - 홈(메인)</title>
     <link rel="stylesheet" href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./mission-03.css" />
   </head>
   <body>
     <div class="container">
@@ -23,11 +24,43 @@
                 <option value="english">영어</option>
               </select>
             </div>
-            <button type="button">로그인</button>
+            <a href="/" class="login-link">로그인</a>
           </div>
         </div>
       </header>
       <main class="main">
+        <div class="promotion">
+          <p class="promotion-description-1">영화, TV 프로그램을 <span>무제한으로.</span></p>
+          <p class="promotion-description-2">다양한 디바이스에서 시청하세요. <span>언제든 해지하실 수 있습니다.</span></p>
+          <p class="promotion-description-3">시청할 준비가 되셨나요? 멤버십을 등록하거나 <span>재시작하려면 이메일 주소를 입력하세요.</span></p>
+          <form action="/" method="POST" class="promotion-form">
+            <div class="form-input-wrapper member-id is--invalid is--focus">
+              <label for="userEmail" class="form-input-label">이메일 주소</label>
+              <input
+                type="email"
+                class="form-input"
+                id="userEmail"
+                name="userEmail"
+                aria-required="true"
+                aria-invalid="false"
+                aria-describedby="emailErrorFeedback"
+              />
+              <span role="alert" id="emailErrorFeedback" class="form-message"
+                >정확한 이메일 주소를 입력하세요.</span
+              >
+            </div>
+            <div class="button-container">
+              <button
+                type="submit"
+                class="button-signin button-fill"
+                disabled="disabled"
+              >
+                30일 무료 이용
+              </button>
+            </div>
+          </form>
+          <p class="promotion-description-4">신규 회원만 이 프로모션을 이용하실 수 있습니다.</p>
+        </div>
       </main>
       <footer class="footer">
         <div class="footer-inner">
